# ai-hallucination-auditor

./: .gitignore  Dockerfile  README.md  api.py  app.py  batch_eval.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_audit_system.bat  service.py  tasks.py  validate-submission.sh
server/: app.py  env.py  service.py  tasks.py  ui.py
